k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-app
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mon-app
  template:
    metadata:
      labels:
        app: mon-app
    spec:
      containers:
        - name: mon-app
          image: ghcr.io/domiq44/mon-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
